add api test, fix bugs
